--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2247,7 +2247,7 @@ input, select, textarea {
 /* Intro */
 
 	#intro {
-		background-color: #39454b;
+		background-color: #183755;
 		background-size: 256px 256px, cover;
 		background-attachment: fixed, fixed;
 		background-position: top left, bottom center;
@@ -2266,7 +2266,7 @@ input, select, textarea {
 /* Two */
 
 	#two {
-		background: url("images/overlay.png"), url("../../images/two.jpg");
+		background-color: #183755;
 		background-size: 256px 256px, cover;
 		background-attachment: fixed, fixed;
 		background-position: top left, center center;
