change title color and header where you go color

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1847,6 +1847,7 @@ input, select, textarea {
 			height: 3em;
 			line-height: 3em;
 			cursor: default;
+			color: #183755;
 		}
 
 			#header h1 a {
